Fix 'get updates to this list' overlapping lastest on this policy on policy activity pages
Re: task 31 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/views/_policies.scss
+++ b/app/assets/stylesheets/frontend/views/_policies.scss
@@ -220,9 +220,14 @@
 
   // see helpers/_feed.scss for the other styles
   .feeds {
-    position: absolute;
-    right: $gutter-half;
-    top: 0;
+    margin: $gutter-one-third 0;
+
+    @include media(tablet) {
+      margin: 0;
+      position: absolute;
+      right: $gutter-half;
+      top: 0;
+    }
 
     .feed-panel {
       position: absolute;
